--- a/.github/workflows/daily-newsletter.yaml
+++ b/.github/workflows/daily-newsletter.yaml
@@ -37,11 +37,11 @@ jobs:
         run: |
           python summarizer.py
       
-      - name: Commit and push report
+     - name: Commit and push report
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull --rebase
+          git pull --rebase origin main
           git add newsletters/ articles.db
           git diff --quiet && git diff --staged --quiet || git commit -m "📰 Newsletter for $(date +'%B %d, %Y')"
-          git push
+          git push origin main
