--- a/.github/workflows/daily-newsletter.yaml
+++ b/.github/workflows/daily-newsletter.yaml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull --rebase origin main
           git add newsletters/ articles.db
           git diff --quiet && git diff --staged --quiet || git commit -m "📰 Newsletter for $(date +'%B %d, %Y')"
-          git push
+          git pull --rebase origin main
+          git push origin main
