--- a/.github/workflows/daily-newsletter.yaml
+++ b/.github/workflows/daily-newsletter.yaml
@@ -42,6 +42,6 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add newsletters/ articles.db
-          git diff --quiet && git diff --staged --quiet || git commit -m "📰 Newsletter for $(date +'%B %d, %Y')"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Newsletter for $(date +'%B %d, %Y')"
           git pull --rebase origin main
           git push origin main
