--- a/.github/workflows/daily-newsletter.yaml
+++ b/.github/workflows/daily-newsletter.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip3 install feedparser beautifulsoup4 requests python-dotenv google-genai markdown resend
+          pip3 install feedparser beautifulsoup4 requests python-dotenv google-genai markdown
 
       - name: Run fetcher
         env:
@@ -47,7 +47,8 @@ jobs:
         if: github.event.schedule == '0 15 * * 1-5' || (github.event_name == 'workflow_dispatch' && inputs.job_type == 'both')
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+          EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
+          EMAIL_PASSWORD: ${{ secrets.APP_PASSWORD }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
         run: |
           python summarizer.py
